manifests/staging/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudxhoster-api
  labels:
    app: cloudxhoster-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloudxhoster-api
  template:
    metadata:
      labels:
        app: cloudxhoster-api
    spec:
      containers:
        - name: cloudxhoster-api-app
          image: registry.gitlab.com/cloudxhoster/cloudxhoster-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: gitlab-registry
      restartPolicy: Always
