manifests/staging/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudxhoster-api-service
  labels:
    app: cloudxhoster-api
spec:
  type: NodePort
  selector:
    app: cloudxhoster-api
  ports:
    - port: 80
      targetPort: 8080
